<resources>
    <string name="_0_0_ago" formatted="false">%s %s ago</string>
    <string name="_0_bill_not_paid_close_it_or_update_debt" formatted="false">%s bill was not paid. close it or update the debt.</string>
    <string name="_0_finished_contract" formatted="false">%s end contract</string>
    <string name="_0_new_reminders" formatted="false">%s new reminders</string>
    <string name="_0_not_in_cur_bill" formatted="false">Payment %s not now</string>
    <string name="_0_not_to_pay" formatted="false">%s not for payment</string>
    <string name="_0_post_to_0" formatted="false">%s rejected to %s</string>
    <string name="_0_postponed" formatted="false">%s rejected</string>
    <string name="_0_precede" formatted="false">%s brought forward</string>
    <string name="_o_pending_deposit_check_0_days" formatted="false">%s:waiting to deposit a check%s.</string>
    <string name="add" formatted="false">Add</string>
    <string name="add_record" formatted="false">Add record</string>
    <string name="add_to_cur_bill" formatted="false">Add to current bill</string>
    <string name="advanced_payments" formatted="false">%s payment in advance</string>
    <string name="alerts" formatted="false">Alerts</string>
    <string name="alerts_appear_at__" formatted="false">Notifications will be shown at ..</string>
    <string name="also_update_0_in_units" formatted="false">Also update %s rate in:</string>
    <string name="amount_that_pay" formatted="false">Payout</string>
    <string name="amount_to_pay" formatted="false">Total</string>
    <string name="apartment" formatted="false">Apartment</string>
    <string name="Apartment_empty" formatted="false">Empty apartment</string>
    <string name="apartment_empty_0_days" formatted="false">The apartment is empty %s days</string>
    <string name="apartment_name" formatted="false">Apartment\'s name</string>
    <string name="apartments_max_free" formatted="false">More than %s apartments</string>
    <string name="alerts_max_free" formatted="false">More than %s alert</string>
    <string name="app_name" formatted="false" translatable="false">Renta</string>
    <string name="are_you_shure_you_want_to_exit" formatted="false">Are you sure you want to exit?</string>
    <string name="save_changes_dialog2" formatted="false">Do you want to save changes?</string>
    <string name="auto_update_from_0_to_0" formatted="false">Automatic update %s (%s)</string>
    <string name="backup" formatted="false">Backup</string>
    <string name="backup_by" formatted="false">Backup by ..</string>
    <string name="backup_email_budy" formatted="false">Can be recovered by opening the attached file</string>
    <string name="bacup_email_title" formatted="false">%s backup:</string>
    <string name="balance" formatted="false">Balance</string>
    <string name="before_0_days" formatted="false">%s day ago</string>
    <string name="bill_of_0" formatted="false">%s bill\n(%s for %s)</string>
    <string name="call_to_0" formatted="false">Call to %s.</string>
    <string name="cancel" formatted="false">Cancel</string>
    <string name="alert_canceled" formatted="false">Alert canceled</string>
    <string name="cant_save_changes_read_only" formatted="false">Can not keep changes , Opened in read-only</string>
    <string name="are_you_sure" formatted="false">Are you sure?</string>
    <string name="check" formatted="false">Check</string>
    <string name="check1" formatted="false">Check-</string>
    <string name="check2" formatted="false">(Check)</string>
    <string name="choose__" formatted="false">Choose…</string>
    <string name="chose_currency_title" formatted="false">Choose currency</string>
    <string name="chose_date_title" formatted="false">Select date</string>
    <string name="clear" formatted="false">Reset</string>
    <string name="comment" formatted="false">Comments</string>
    <string name="contact_us" formatted="false">Contact us</string>
    <string name="contact_us_email_budy" formatted="false">Problems\\Questions\\bugs\\requests ..</string>
    <string name="counter" formatted="false">Meter</string>
    <string name="counter_0_out_of_date_cant_end_contract" formatted="false">%s not updated meter\n impossible to close a contract</string>
    <string name="counter_not_updated_to_tenant" formatted="false">Outdated meter reading</string>
    <string name="counters" formatted="false">Meters</string>
    <string name="curent_0" formatted="false">Current (%s)</string>
    <string name="curent_date" formatted="false">Current date</string>
    <string name="currency" formatted="false">Currency</string>
    <string name="date" formatted="false">Date</string>
    <string name="date_update" formatted="false">Last update date</string>
    <string name="date2" formatted="false">Date…</string>
    <string name="dayly_alert" formatted="false">Daily alert</string>
    <string name="days" formatted="false">Days</string>
    <string name="days1" formatted="false">(%s days)</string>
    <string name="days2" formatted="false">%s days</string>
    <string name="debt" formatted="false">Debt</string>
    <string name="debt_0_of_0" formatted="false">There is %s of %s</string>
    <string name="del" formatted="false">Delete</string>
    <string name="del_all_after_date" formatted="false">Delete all after the date</string>
    <string name="del_all_befor_date" formatted="false">Delete all before the date</string>
    <string name="del_this_date" formatted="false">Delete only this date</string>
    <string name="demo" formatted="false">Demo</string>
    <string name="deposit_check_of_0" formatted="false">Depositing %s\'s check.\n(%s..%s)</string>
    <string name="details" formatted="false">Details</string>
    <string name="divided_apartment" formatted="false">Divided apartment</string>
    <string name="edit" formatted="false">Edit</string>
    <string name="edit1" formatted="false">%s(editing)</string>
    <string name="elect" formatted="false">Electric</string>
    <string name="elect_cnt" formatted="false">Electric-meter</string>
    <string name="email" formatted="false">E-mail</string>
    <string name="empty" formatted="false">Empty</string>
    <string name="end_contract" formatted="false">Ending tenancy agreement</string>
    <string name="end_contract_with_0" formatted="false">Finish with %s</string>
    <string name="end_of_contract_alert1" formatted="false">Contract with %s ending..</string>
    <string name="ending" formatted="false">End</string>
    <string name="enter_again" formatted="false">Enter again</string>
    <string name="enter_name" formatted="false">Enter Name/Address</string>
    <string name="enter_password" formatted="false">Enter password</string>
    <string name="every_0_in_month" formatted="false">Every %sth of the month</string>
    <string name="every_0month_in_0" formatted="false">Every %s months on the %sth</string>
    <string name="every_2month_in_0" formatted="false">Every two months on the %sth</string>
    <string name="exit" formatted="false">Exit</string>
    <string name="find" formatted="false">Find</string>
    <string name="history" formatted="false">History</string>
    <string name="hours" formatted="false">Hours</string>
    <string name="ignor" formatted="false">Ignore</string>
    <string name="illegal_date" formatted="false">%s Invalid date</string>
    <string name="illegal_password" formatted="false">Illegal password</string>
    <string name="in_0_0_time" formatted="false">In %s %s</string>
    <string name="in_0_days" formatted="false">In %s days</string>
    <string name="in_0_days_to_next_bill" formatted="false">%s days to next payment.</string>
    <string name="include_counters" formatted="false">Including meters</string>
    <string name="invalid_value" formatted="false">Invalid value</string>
    <string name="irrelevant" formatted="false">Irrelevant</string>
    <string name="its_ok" formatted="false">It is OK</string>
    <string name="language" formatted="false">Language</string>
    <string name="last_update" formatted="false">Last update</string>
    <string name="load" formatted="false">Loading</string>
    <string name="log" formatted="false">Records</string>
    <string name="main" formatted="false">Home</string>
    <string name="measur" formatted="false">-Measured-</string>
    <string name="message_amant_0_send_at_0" formatted="false">(message was sent %s at %s)</string>
    <string name="monthly" formatted="false">Monthly</string>
    <string name="monthly_payment__" formatted="false">Monthly payment..</string>
    <string name="months_in_advance" formatted="false">%s months in advance(%s)</string>
    <string name="more_0_checkes" formatted="false">Remained %s checks</string>
    <string name="n_month" formatted="false">%s months</string>
    <string name="new_alert" formatted="false">Add new alert</string>
    <string name="create_new_db" formatted="false">Create a new database.</string>
    <string name="new_reminder" formatted="false">New reminder</string>
    <string name="new_tenant" formatted="false">New tenant</string>
    <string name="new_tenant1" formatted="false">--New tenant--</string>
    <string name="new1" formatted="false">New</string>
    <string name="next" formatted="false">Next</string>
    <string name="next_0_payment_be_at_0" formatted="false">Next %s payment should be %s</string>
    <string name="next_alert" formatted="false">Next alert:</string>
    <string name="next_bill_0" formatted="false">Next payment:%s</string>
    <string name="next_pay" formatted="false">Next payment</string>
    <string name="next_payment_0" formatted="false">Next payment %s</string>
    <string name="next_payment_not_updated" formatted="false">Next payment is not updated</string>
    <string name="No" formatted="false">No</string>
    <string name="no_debt" formatted="false">No debt</string>
    <string name="no_payment" formatted="false">Not for payment</string>
    <string name="not_found1" formatted="false">(not found)</string>
    <string name="not_found" formatted="false">Not found</string>
    <string name="now" formatted="false">Now</string>
    <string name="ok" formatted="false">OK</string>
    <string name="payment" formatted="false">Payment</string>
    <string name="previous_tenants" formatted="false">Previous tenants</string>
    <string name="price" formatted="false">Price</string>
    <string name="setting" formatted="false">Settings</string>
    <string name="tariff" formatted="false">Rate</string>
    <string name="tenant" formatted="false">Tenant</string>
    <string name="today" formatted="false">Today</string>
    <string name="total" formatted="false">Total</string>
    <string name="undo_action" formatted="false">Undo</string>
    <string name="update_counter_0" formatted="false">Update %s meter </string>
    <string name="set_default">default</string>
    <string name="del_all">delete all</string>
    <string name="property">Property</string>
    <string name="about">About</string>
    <string name="change_counter_0">Change %s meter</string>
    <string name="save">Save</string>
    <string name="make_conntact_with" formatted="false">Make contact with %s</string>
    <string name="calendar">Calendar</string>
    <string name="tenants">Tenants</string>
    <string name="copy">Copy</string>
    <string name="add_phone_numer">Add phone number</string>
    <string name="update_hide_meters">Hide meters</string>
    <string name="update_show_meters">Show meters</string>
    <string name="shortcut">Shortcuts</string>
    <string name="reports">Reports</string>
    <string name="average_income">Average income</string>
    <string name="add_income">Add income</string>
    <string name="add_expense">Add expense</string>
    <string name="revenue">Revenue</string>
    <string name="expenses">Expenses</string>
    <string name="filter">Filter</string>
    <string name="delete_report_from">Delete report from..</string>
</resources>