<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_property"
            android:title="@string/property" />
        <item
            android:id="@+id/nav_tenants"
            android:title="@string/tenants" />
        <item
            android:id="@+id/nav_alerts"
            android:title="@string/alerts" />
        <item
            android:id="@+id/nav_reports"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_shortcut"
            android:title="@string/shortcut" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_exit"
            android:title="@string/exit" />
    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
-->
</menu>
