<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" android:gravity="center"
    >

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="4"
        android:layout_height="wrap_content"
        android:id="@+id/buttons_ll"
        android:gravity="center">
        <Button
            style="@style/my_dialog_btn"
            android:text="@string/cancel"
            android:id="@+id/cancel_btn"/>
        <Button
            style="@style/my_dialog_btn"
            android:text="@string/clear"
            android:id="@+id/clr_btn"/>
        <Button
            style="@style/my_dialog_btn"
            android:text="@string/now"
            android:id="@+id/now_btn"/>
        <Button
            style="@style/my_dialog_btn"
            android:text="@string/ok"
            android:id="@+id/ok_btn"/>
    </LinearLayout>
</LinearLayout>