<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="end"
    android:orientation="vertical">

    <TableLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hapticFeedbackEnabled="false"
        android:orientation="vertical"
        android:padding="20dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/report_select_date_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="01/02/20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/date" />


        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center">

            <Spinner
                android:id="@+id/report_select_aprtmnt_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:prompt="@string/reports" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/apartment" />

        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center">

            <Spinner
                android:id="@+id/report_select_tenant_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:prompt="@string/reports" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tenant" />

        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/report_select_subjects_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:text="@string/add_income" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/comment" />

        </TableRow>


        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/report_select_price_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="1234" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/price" />

        </TableRow>

    </TableLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:layout_gravity="center"
            android:id="@+id/report_is_revenue_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/revenue"/>
        <RadioButton
            android:layout_gravity="center"
            android:id="@+id/report_is_expenses_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenses"/>
    </RadioGroup>

</LinearLayout>