<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="400dp"
              android:weightSum="100"
              android:layout_height="match_parent"
              android:gravity="center_horizontal" android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:id="@+id/to_pay_ll">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="@string/amount_to_pay"/>
        <EditText
            android:id="@+id/to_pay_tv"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/total"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:id="@+id/payed_ll">
        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/amount_that_pay"
            android:paddingTop="10dp"/>

        <EditText
            android:id="@+id/payed_tv"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="00000"
            android:inputType="number"
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:id="@+id/debt_ll">
        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/is_debt_rg">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debt"
                android:id="@+id/is_debt1_rb"
                android:layout_weight="50"
                android:checked="true"
                android:maxLines="1"
                android:textSize="12sp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:layout_weight="50"
                android:id="@+id/is_debt0_rb"
                android:maxLines="1"
                android:textSize="12sp"/>
        </RadioGroup>
        <EditText
            android:id="@+id/debt_tv"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="0"
            android:hint="@string/debt"
            android:inputType="number"/>
    </LinearLayout>
<!--AAA-->
    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@style/my_dialog_btn"
            android:text="@string/cancel"
            android:id="@+id/cancel_btn"/>

        <Button
            style="@style/my_dialog_btn"
            android:text="@string/ok"
            android:id="@+id/ok_btn"/>
    </LinearLayout>

</LinearLayout>